--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -111,19 +111,6 @@ blueprint:
         If set, this will override individual devices and groups above. Note: TV (far below) must be set to false.
         Base URL must start with https since telegram URL buttons only work with https.
       default: ""
-    frigate_url:
-      name: Frigate Base URL (Optional)
-      description: |
-        The Frigate Base URL for downloading files for telegram integration.
-        Required if Telegram Chat ID is set and bearer token is unset.
-      default: ""
-    bearer_token:
-      name: Bearer token (Optional)
-      description: |
-        Bearer token is used instead of accessing Frigate API via unsecure ports.
-        Required if Telegram Chat ID is set and Frigate API URL is unset.
-        Bearer token should be generated as HS256 JWT with Frigate JWT secret.
-      default: ""
     base_url:
       name: Base URL (Optional)
       description: |
@@ -857,8 +844,6 @@ variables:
   camera_name: "{{ camera | replace('_', ' ') | title }}"
   input_base_url: !input base_url
   base_url: "{{ input_base_url.rstrip('/')}}"
-  input_frigate_url: !input frigate_url
-  frigate_url: "{{ input_frigate_url.rstrip('/')}}"
   update_sub_label: !input update_sub_label
   input_client_id: !input client_id
   client_id: "{{input_client_id if not input_client_id else '/' + input_client_id if '/' not in input_client_id else input_client_id }}"
@@ -870,8 +855,7 @@ variables:
   notify_group: !input notify_group
   notify_group_target: "{{ notify_group | lower | regex_replace('^notify\\.', '') | replace(' ','_') }}"
   telegram_chat_id: !input notify_telegram_chat_id
-  bearer_token: !input bearer_token
-  telegram: "{{true if ((telegram_chat_id | length > 0) and (frigate_url or bearer_token)) else ''}}"
+  telegram: "{{true if (telegram_chat_id | length > 0) else ''}}"
   zone_only: !input zone_filter
   input_zones: !input zones
   zones: "{{ input_zones }}"
@@ -1015,7 +999,6 @@ action:
                             Input Camera(formatted): {{input_camera}}({{input_camera_name}}), 
                             Trigger Camera(formatted): {{camera}}({{camera_name}}), 
                             Base URL: {{'REDACTED' if base_url and redacted else base_url}}, 
-                            Frigate Base URL: {{'REDACTED' if frigate_url and redacted else frigate_url}},
                             critical: {{critical}}, 
                             tts: {{tts}} 
                             helper: {{tts_helper if tts else 'N/A'}},
@@ -1103,14 +1086,7 @@ action:
                            data:
                              target: "{{telegram_chat_id}}"
                              caption: "{{message}}"
-                             password: "{{ bearer_token if bearer_token else '' }}"
-                             authentication: "{{ 'bearer_token' if bearer_token else '' }}"
-                             url: >
-                               {% if bearer_token %}
-                                {{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}
-                               {% else %}
-                                {{frigate_url}}/api/events/{{id}}/{{attachment}}
-                               {% endif %}
+                             url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
                       - conditions: "{{ not notify_group_target }}"
                         sequence:
                           - device_id: !input notify_device
@@ -1469,14 +1445,7 @@ action:
                                         data:
                                           target: "{{telegram_chat_id}}"
                                           caption: "{{message}}"
-                                          password: "{{ bearer_token if bearer_token else '' }}"
-                                          authentication: "{{ 'bearer_token' if bearer_token else '' }}"
-                                          url: >
-                                            {% if bearer_token %}
-                                              {{ video }}
-                                            {% else %}
-                                              {{frigate_url}}/api/events/{{id}}/clip.mp4
-                                            {% endif %}
+                                          url: "{{ video }}"
                                           inline_keyboard:
                                             - [["{{button_1}}", "{{url_1}}"], ["{{button_2}}", "{{url_2}}"]]
                                             - [["{{button_3}}", "{{url_3}}"]]
@@ -1485,14 +1454,7 @@ action:
                                       data:
                                         target: "{{telegram_chat_id}}"
                                         caption: "{{message}}"
-                                        password: "{{ bearer_token if bearer_token else '' }}"
-                                        authentication: "{{ 'bearer_token' if bearer_token else '' }}"
-                                        url: >
-                                           {% if bearer_token %}
-                                            {{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}
-                                           {% else %}
-                                            {{frigate_url}}/api/events/{{id}}/{{attachment}}
-                                           {% endif %}
+                                        url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
                                         inline_keyboard:
                                           - [["{{button_1}}", "{{url_1}}"], ["{{button_2}}", "{{url_2}}"]]
                                           - [["{{button_3}}", "{{url_3}}"]]
